highlight Customers tab header whnen showing customer related pages

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,4 +1,4 @@
-<div id="page-header" class="clearfix">
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'customers' %><div id="page-header" class="clearfix">
   <h1><%= translate_helper("customer") + " " + @customer.name %></h1>
 </div>
 
