--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'customers' %>
 <div id="page-header" class="clearfix">
   <h1><%=translate_helper("new_customer")%></h1>
 </div>
