Finish up permissions for customer trips.  Fix label typo. [#98322312]

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -133,7 +133,7 @@
     </ol>
 
     <div id="customer_providers" class="col-md-12">
-      <div class="col-md-3"><bold><%= translate_helper("customer_authorized_providers") %></bold></div>
+      <div class="col-md-3"><strong><%= translate_helper("customer_authorized_providers") %></strong></div>
       <div class="col-md-9"><%= f.association :authorized_providers, as: :check_boxes, label: false, :item_wrapper_class => 'col-md-4', :label_html => { :class => 'col-md-12', :wrapper => false } %></div>
     </div>
 
