--- a/app/views/trips/_find_or_create_address.html.erb
+++ b/app/views/trips/_find_or_create_address.html.erb
@@ -1,3 +1,7 @@
+  <li class="selfclear">
+    <%= label_tag "#{prefix}_notes", translate_helper("address_notes") %>
+    <%= text_area_tag "#{prefix}_notes", address.notes %>
+  </li>
 <%= form_tag addresses_path, :class=>'address-search', :method=>:post, :remote=>true, 'data-id-element' => "#trip_#{prefix}_address_id", 'data-label-element' => "##{prefix}_search_address" do %> 
   <%= hidden_field_tag 'address_id', address.id %>
   <%= hidden_field_tag 'prefix', prefix %>
@@ -49,6 +53,7 @@
     <%= label_tag "#{prefix}_in_district", translate_helper("in_district") %>
     <%= select_tag "#{prefix}_in_district", options_for_select([["Yes", "true"], ["No", "false"]], address.in_district ? "true" : "false") %>
   </li>
+
   </ol>
   </fieldset>
 <% end %>
