added new run views

--- a/app/views/runs/edit.html.erb
+++ b/app/views/runs/edit.html.erb
@@ -1,99 +1,1 @@
-<div id="page-header" class="clearfix">
-  <h1><%= translate_helper("editing_run_heading", run_date: @run.date.to_s(:long)) %></h1>
-</div>
-
-<%= form_for @run do |f| %>
-  <%= render "form", :f => f %>
-  
-  <fieldset>
-    <table class="ride_trips">
-      <thead>
-        <tr>
-          <th>translate_helper("pickup_time")</th>
-          <th>translate_helper("customer_name")</th>
-          <th>translate_helper("in_district")</th>
-          <th>translate_helper("trip_purpose")</th>
-          <th>translate_helper("round_trip")</th>
-          <th>translate_helper("guest_count")</th>
-          <th>translate_helper("attendant_count")</th>
-          <th>translate_helper("result")</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @run.trips.each do |trip| %>
-          <%= render :partial => 'trip', :locals => {:trip => trip} %>
-        <% end %>
-      </tbody>
-    </table>
-    <hr />
-    <% if can?(:create, Trip) && current_user.current_provider.allow_trip_entry_from_runs_page? %>
-      <%= link_to translate_helper("new_trip"), new_trip_path(:start => @run.date.to_time.to_i, :run_id => @run.id), :class=>'action-bttn new', :id => 'trip_entry_from_run_page' %>
-      <span id="search-spinner"></span>
-    <% end %>
-  </fieldset>
-
-  <div class="actions">
-    <%= f.submit translate_helper("submit_run") %>
-  </div>
-<% end %>
-
-<div id="new_trip_from_run_page"></div>
-
-<%= render "shared/date_picker_javascript" %>
-<%= javascript_tag do %>
-  RidePilot.urls.new_trip = '<%= j new_trip_path %>';
-  $(document).ready(function() {
-    $('#new_trip_from_run_page').dialog({
-      autoOpen: false,
-      height: 'auto',
-      minHeight: 450,
-      width: 'auto',
-      minWidth: 1200,
-      modal: true,
-      draggable: false,
-      title: "New Trip for <%= j @run.label %>",
-      buttons: {
-        "Add Trip": function() {
-          form = $(this).find('form');
-          $(form).trigger('submit');
-        },
-        Cancel: function() {
-          $(this).dialog("close");
-        }
-      },
-      open: function() {
-        $(this).find('form a.action-bttn[href=/trips], form .actions, form hr:last').hide();
-      }
-    });
-    
-    $('#trip_entry_from_run_page').click(function(e) {
-      e.preventDefault();
-      get_new_trip_form();
-    });
-    
-    $("body").on('ajax:complete', "#new_trip", function(e, data, status, xhr){
-      var json = eval('(' + data.responseText + ')');
-      if (json.status == "success") {
-        $('#new_trip_from_run_page').dialog("close");
-        $('.ride_trips tbody').append(json.trip);
-        if (confirm("Trip was added successfully. Add another?")) {
-          get_new_trip_form();
-        }
-      } else  {
-        $('#new_trip_from_run_page').dialog("close").html(json.form).dialog("open");
-        makeDatePickers();
-      }
-    });
-    
-    function get_new_trip_form() {
-      $("#search-spinner").css("visibility", "visible");
-      $.get(RidePilot.urls.new_trip, {'run_id' : <%= @run.id %>}, function(data) {
-        $("#search-spinner").css("visibility", "hidden");
-        $('#new_trip_from_run_page').html(data.form).dialog("open");
-        makeDatePickers();
-      }, "json");
-    };
-
-  });
-<% end %>
+<%= render 'form', edit_mode: :edit %>
