--- a/app/views/runs/new.html.erb
+++ b/app/views/runs/new.html.erb
@@ -1,10 +1,1 @@
-<div id="page-header" class="clearfix">
-  <h1><%= translate_helper("new_run_heading") %></h1>
-</div>
-
-<%= form_for @run do |f| %>
-  <%= render "form", :f => f %>
-  <div class="actions">
-    <%= f.submit translate_helper("new_run_submit") %>
-  </div>
-<% end %>
+<%= render 'form', edit_mode: :new %>
