--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -1,13 +1,13 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'trips'
 .clearfix.row#page-header
-  %h1= translate_helper("trips")
   = link_to translate_helper("new_trip_link_text"), new_trip_path, :class=>'btn action-button pull-right'
+  %h1= translate_helper("trips")
   .clearfix
 
 .col-md-3{style: 'padding: 0px 15px 0px 0px;'}
   = render :partial => 'filters'
 .col-md-9{style: 'padding: 0px;'}
-  = render 'calendar'
+  = render 'calendar', base_path: trips_path, resources: @day_resources, events: @trips_json
 
   = render :partial => 'list'
 
