run pages: new, show, edit

--- a/app/views/runs/_row.html.erb
+++ b/app/views/runs/_row.html.erb
@@ -1,9 +1,9 @@
 <tr>
+  <td><% if can? :show, run %><%= link_to translate_helper("view"), run_path(run) %><% end %></td>
   <td><%= run.date.to_s(:long) %></td>
   <td><%= run.scheduled_start_time.try(:to_s,:time_only) %></td>
   <td><%= run.scheduled_end_time.try(:to_s,:time_only) %></td>
   <td><%= run.vehicle ? run.vehicle.name : translate_helper('no_vehicle') %></td>
   <td><%= run.driver  ? run.driver.name : translate_helper('no_driver') %></td>
   <td><%= run.complete ? translate_helper('complete') : translate_helper('incomplete') %></td>
-  <td><% if can? :edit, run %><%= link_to translate_helper("edit"), edit_run_path(run), :class => :edit %><% end %></td>
 </tr>
