--- a/app/views/trips/_trip_parameters_panel.html.haml
+++ b/app/views/trips/_trip_parameters_panel.html.haml
@@ -3,17 +3,17 @@
     %h3.panel-title
       = translate_helper(:trip_parameters)
   .panel-body{style: 'padding: 5px;'}
-    .form-group.col-sm-12.timepicker
+    .form-group.col-sm-12
       .col-sm-3
         = f.label :pickup_time, translate_helper("pickup_time")
       .col-sm-9
-        = f.text_field :pickup_time, :value => @trip.pickup_time.try(:to_s, :form), class: 'form-control'
+        = f.text_field :pickup_time, :value => @trip.pickup_time.try(:to_s, :form), class: 'datetime-picker form-control', readonly: true
 
-    .form-group.col-sm-12.timepicker
+    .form-group.col-sm-12
       .col-sm-3
         = f.label :appointment_time, translate_helper("appointment_time") 
       .col-sm-9
-        = f.text_field :appointment_time, :value => @trip.appointment_time.try(:to_s, :form), class: 'form-control'
+        = f.text_field :appointment_time, :value => @trip.appointment_time.try(:to_s, :form), class: 'datetime-picker form-control', readonly: true
 
     - unless add_new_trip_via_run_page?
       .form-group.col-sm-12
