--- a/app/views/drivers/_driver_compliance_fields.html.erb
+++ b/app/views/drivers/_driver_compliance_fields.html.erb
@@ -1,25 +1,32 @@
-<fieldset class="driver-compliance-fields fields">
-  <%= f.hidden_field :id %>
-  
-  <p>
-    <%= f.label :event, translate_helper("driver_compliance_form_event") %>
-    <%= f.text_field :event %>
-  </p>
-
-  <p>
-    <%= f.label :notes, translate_helper("driver_compliance_form_notes") %>
-    <%= f.text_area :notes %>
-  </p>
-
-  <p>
-    <%= f.label :due_date, translate_helper("driver_compliance_form_due_date") %>
-    <%= f.text_field :due_date, data: {behavior: 'date-picker'} %>
-  </p>
-  
-  <p>
-    <%= f.label :compliance_date, translate_helper("driver_compliance_form_compliance_date") %>
-    <%= f.text_field :compliance_date, data: {behavior: 'date-picker'} %>
-  </p>
-  
-  <p><%= f.link_to_remove translate_helper("driver_compliances_remove_link_title") %></p>
-</fieldset>
+<tr class="fields driver-compliance-fields">
+  <td>
+    <%= f.hidden_field :id %>
+    <%= f.text_field :event, class: "form-control" %>
+  </td>
+  <td>
+    <%= f.text_field :notes, class: "form-control" %>
+  </td>
+  <td>
+    <div class="input-group datepicker-icon">
+      <%= f.text_field :due_date, class: "form-control datepicker" %>
+      <div class="input-group-btn">
+        <button class="btn btn-default" type="button">
+          <%= image_tag "calendar-clock.png" %>
+        </button>
+      </div>
+    </div>
+  </td>
+  <td>
+    <div class="input-group datepicker-icon">
+      <%= f.text_field :compliance_date, class: "form-control datepicker" %>
+      <div class="input-group-btn">
+        <button class="btn btn-default" type="button">
+          <%= image_tag "calendar-clock.png" %>
+        </button>
+      </div>
+    </div>
+  </td>
+  <td>
+    <%= f.link_to_remove "X", class: "btn btn-danger btn-sm" %>
+  </td>
+</tr>
