on run editing form, only enable direct editing trip result in trips table; added partials to differentiate trip row display in editing or show-only modes

--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -23,7 +23,7 @@
   </div>
   <div class="col-sm-12">
     <% if edit_mode != :new %>
-      <%= render 'trip_list', f: f %>
+      <%= render 'trip_list', f: f, edit_mode: edit_mode %>
     <% end %>
   </div>
   
