--- a/app/views/runs/_trip_list.html.haml
+++ b/app/views/runs/_trip_list.html.haml
@@ -1,3 +1,4 @@
+- edit_mode = :edit if !defined? edit_mode
 %table.ride_trips
   %thead
     %tr
@@ -5,6 +6,7 @@
       %th=translate_helper("customer_column")
       %th=translate_helper("pickup_address_column")
       %th=translate_helper("pickup_time_column")
+      %th=translate_helper("dropoff_address_column")
       %th=translate_helper("appointment_time_column")
       %th=translate_helper("trip_purpose_column")
       %th=translate_helper("trip_round_trip_column")
@@ -13,4 +15,8 @@
       %th=translate_helper("trip_result_column")
   %tbody
     - @run.trips.each do |trip| 
-      = render :partial => 'trip', :locals => {:trip => trip}
+      - if edit_mode == :edit
+        = fields_for 'trips_attributes[]', trip do |trip_fields|
+          = render 'editable_trip_row', :trip_fields => trip_fields, :trip => trip
+      - else
+        = render 'non_editable_trip_row', :trip => trip
