--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -1,5 +1,5 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'trips'
-.clearfix.row#page-header
+.clearfix.row#page-header{style: 'padding: 0px;'}
   = link_to translate_helper("new_trip_link_text"), new_trip_path, :class=>'btn action-button pull-right'
   %h1= translate_helper("trips")
   .clearfix
