added name field in run editing form

--- a/app/views/trips/_assignment_panel.html.haml
+++ b/app/views/trips/_assignment_panel.html.haml
@@ -8,6 +8,6 @@
         = translate_helper("assignment")
       .col-sm-9
         - if @trip.run_id
-          = @trip.run_name
+          = @trip.run_label
         - else
           = translate_helper("n_a")
