--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -13,6 +13,16 @@
       </ul>
     </div>
   <% end %>
+  <div class="col-sm-12">
+    <div class="col-sm-12 col-md-6 form-group">
+      <div class="col-sm-3">
+        <%= f.label :name, translate_helper("name") %>
+      </div>
+      <div class="col-sm-9">
+        <%= f.text_field :name, class: 'form-control' %>
+      </div>
+    </div>
+  </div>
 
   <div class="col-sm-12 col-md-6">
     <%= render 'date_time_panel', f: f, edit_mode: edit_mode %>
